@@ -174,6 +174,7 @@ let state_preserving = [
   "Print Module Type";
   "Print Modules";
   "Print Proof";
+  "Print Rewrite HintDb";
   "Print Setoids";
   "Print Scope";
   "Print Scopes.";
